# beancount-zenmoney

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: release.sh
src/beancount_zenmoney/: __init__.py  importer.py
tests/: conftest.py  test_importer.py
tests/fixtures/: test_transactions.csv
